--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/server.ts",
-    "dev": "npx nodemon src/server.ts"
+    "start": "ts-node src/app.ts",
+    "dev": "npx nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
