--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts",
-    "dev": "npx nodemon src/app.ts",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "start": "ts-node src/server.ts",
+    "dev": "npx nodemon src/server.ts",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "dev:migration:run": "npx run prisma migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
@@ -28,11 +30,13 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.18",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
