--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/server.ts",
+    "start": "npx prisma migrate dev && ts-node src/server.ts",
     "dev": "npx nodemon src/server.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "dev:migration:run": "npx run prisma migrate"
