feat: added seed to stars table

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,7 @@
-PORT=
-API_KEY=
-DATABASE_URL=
-TOKEN_SECRET=
+PORT=5000
+API_KEY=get one api key from TMDB
+TOKEN_SECRET=token password
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123456
+POSTGRES_DB=watchlist
+DATABASE_URL=postgres://postgres:123456@database:5432/watchlist?schema=public
