--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx prisma migrate dev && ts-node src/server.ts",
+    "start": "npx prisma migrate deploy && ts-node src/server.ts",
     "dev": "npx nodemon src/server.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "dev:migration:run": "npx run prisma migrate"
+    "dev:migration:run": "npx run prisma migrate",
+    "seed": "node seed.js"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +32,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
